added recording button added recording status

--- a/voctogui/default-config.ini
+++ b/voctogui/default-config.ini
@@ -26,7 +26,8 @@ system=gl
 
 [misc]
 close=true
-cut=true
+cut=false
+rec=true
 
 [audio]
 ; Show volume controls even if a default audio source is set
